lib/tests/fixtures/compiler/evaluation/interpolated_variable_in_type_spec.baseline
Error: interpolated_variable_in_type_spec.pp:1:23: node 'test': variables cannot be used in type specifications.
  type MyEnum = Enum["${x}"]
                        ^
